Fix some possible bugs and warnings reported by IntelliJ code-inspection