@@ -7,7 +7,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import io.kubernetes.client.openapi.ApiException;
@@ -230,7 +230,6 @@ public class BuildApplication {
    *
    * @param namespace name of the namespace in which to create the temporary pod
    * @return V1Pod created pod object
-   * @throws ApiException when create pod fails
    */
   public static V1Pod setupWebLogicPod(String namespace, V1Container container) {
     final LoggingFacade logger = getLogger();
@@ -246,13 +245,13 @@ public class BuildApplication {
     //final String podName = "weblogic-build-pod-" + namespace;
     V1Pod podBody = new V1Pod()
         .spec(new V1PodSpec()
-            .containers(Arrays.asList(container
+            .containers(List.of(container
                 .name("weblogic-container")
                 .image(WEBLOGIC_IMAGE_TO_USE_IN_SPEC)
                 .imagePullPolicy(IMAGE_PULL_POLICY)
                 .addCommandItem("sleep")
                 .addArgsItem("600")))
-            .imagePullSecrets(Arrays.asList(new V1LocalObjectReference()
+            .imagePullSecrets(List.of(new V1LocalObjectReference()
                 .name(BASE_IMAGES_REPO_SECRET_NAME)))) // the persistent volume claim used by the test
         .metadata(new V1ObjectMeta().name(podName))
         .apiVersion("v1")
